[gd_scene load_steps=5 format=3 uid="uid://ce01fdj5xj3gm"]

[ext_resource type="Script" path="res://Cooking/mixing.gd" id="1_44wub"]
[ext_resource type="Texture2D" uid="uid://crthnb4f5dn0v" path="res://Cooking/Sprites/Mixing.png" id="2_y40ng"]

[sub_resource type="Gradient" id="Gradient_eyd8o"]
offsets = PackedFloat32Array(0, 0.521327, 1)
colors = PackedColorArray(1, 0.776471, 0.521569, 1, 1, 0.701978, 0.331645, 1, 1, 0.776471, 0.521569, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_io0mx"]
gradient = SubResource("Gradient_eyd8o")

[node name="Mixing" type="Node2D"]
script = ExtResource("1_44wub")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_y40ng")
centered = false

[node name="bowl" type="Sprite2D" parent="."]
position = Vector2(504, 295)
scale = Vector2(0.329502, 78.8125)
texture = SubResource("GradientTexture1D_io0mx")

[node name="mixing_indicator" type="Line2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1.0
offset_top = 535.0
offset_right = 1001.0
offset_bottom = 700.0
color = Color(0.140447, 0.140447, 0.140447, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 535.0
offset_right = 998.0
offset_bottom = 694.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 6.0
offset_top = 532.0
offset_right = 1000.0
offset_bottom = 698.0

[node name="Control" type="Control" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="timer_label" type="Label" parent="Control/HBoxContainer/Control"]
layout_mode = 0
offset_left = 14.0
offset_top = -510.0
offset_right = 189.0
offset_bottom = -388.0
text = "timer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="instructions_label" type="Label" parent="Control/HBoxContainer/Control2"]
layout_mode = 0
offset_left = 249.0
offset_top = -519.0
offset_right = 716.0
offset_bottom = -377.0
text = "Instructions"
horizontal_alignment = 1
vertical_alignment = 1

[node name="mixing_timer" type="Timer" parent="."]

[node name="game_timer" type="Timer" parent="."]
wait_time = 20.0

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 78.0
offset_top = 373.0
offset_right = 165.0
offset_bottom = 452.0

[connection signal="timeout" from="game_timer" to="." method="_on_game_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
